--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ body * {
   margin-bottom: 0px;
   margin-top: 56px;
   */
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
