--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
   background-position: top center;
   background-size: cover;
   */
-
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 body * {
   font-family: "Inter", sans-serif;
@@ -51,7 +51,7 @@ body * {
   */
 
   width: 100%;
-  max-width: 580px;
+  max-width: 588px;
   width: 360px;
   margin: 56px auto 0px;
   padding: 0 24px;
@@ -97,13 +97,10 @@ body * {
   transform: translateY(-50%);
 }
 
-
 .light #switch button {
   right: 0;
   left: initial;
 }
-
-
 
 #switch span {
   display: block;
@@ -175,4 +172,15 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+/* Media Queries*/
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/Background.jpg);
+  }
+
+  .ligh {
+    --bg-url: url(./assets/Bg-light.jpg);
+  }
 }
